k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fusion
  labels:
    app.kubernetes.io/managed-by: argocd
    environment: production
